<resources>
    <string name="app_name">DemoApp</string>
    <string name="user_name">User Name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="student_registration">Student Registration</string>
    <string name="student_list">Student List</string>
    <string name="student_detail">Student Detail</string>
    <string name="roll_no">Roll No</string>
    <string name="clas_s">Class</string>
    <string name="name">Name</string>
    <string name="lat_long">Lat-Long</string>
    <string name="submit">Submit</string>
</resources>