<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    tools:context=".activity.LoginActivity">

    <RelativeLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="70dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/round_linear"
            android:elevation="4dp"
            android:padding="12dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_user_id"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/user_name"
                    app:boxStrokeColor="@color/sky">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtUserCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:text="admin"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/password"
                    app:boxStrokeColor="@color/sky"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/sky">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:text="admin@123"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/sky"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    />


            </LinearLayout>

        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>